--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "vue-node-passport",
+  "author": {
+    "name": "Christopher Geddy Lee",
+    "email": "g3ddylee@gmail.com"
+  },
+  "description": "Authentication example with Node/Passport/Vue/Mongo/Twitch",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +13,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.4.5",
+    "mongoose-findorcreate": "^3.0.0",
+    "passport": "^0.4.0",
+    "passport-twitch": "^1.0.3",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -19,6 +33,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
+    "nodemon": "^1.18.9",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.21"
   },
