--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "NODE_ENV=production node server"
   },
   "dependencies": {
     "axios": "^0.18.0",
