--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "NODE_ENV=production node server"
+    "start": "npm run build && node server"
   },
   "dependencies": {
     "axios": "^0.18.0",
